--- a/2_lake_wq_analysis.Rmd
+++ b/2_lake_wq_analysis.Rmd
@@ -1,19 +1,23 @@
 ---
 title: "Lake Water Quality Analysis"
-author: "Matthew Ross"
-date: "9/17/2019"
+author: "Orion and Matthew Ross"
+date: "2/23/2022"
 output: html_document
 ---
 
 
 
 ```{r setup, include=FALSE}
+
+#install.packages(c("RApiSerialize", "LAGOSNE", 'USAboundaries'))
+
 library(tidyverse) # Tidy packages
 library(sf) #Spatial package that can read and create shapefiles 
 library(mapview) #Interactive maps
 library(LAGOSNE) #Lots and lots of clean lake data
 library(USAboundaries) #USA states and counties
 library(lubridate) #For dealing with date and time
+library(systemfonts)
 ```
 
 
@@ -25,12 +29,9 @@ library(lubridate) #For dealing with date and time
 
 ### First download and then specifically grab the locus (or site lat longs)
 ```{r data-read}
-#Lagos download script
-#lagosne_get(dest_folder = LAGOSNE:::lagos_path(),overwrite=T)
 
 #Load in lagos
-lagos <- lagosne_load()
-
+lagos <- lagosne_load(fpath = "/Users/orioncr/Downloads/LAGOSNE/LAGOSNE/data_1.087.3.qs")
 
 #Grab the lake centroid info
 lake_centers <- lagos$locus
@@ -127,21 +128,38 @@ sites with at least 200 observations?
 
 ```{r}
 #Your code here
-
+ggplot(chla_secchi_200,aes(x=chla,y=secchi)) + 
+  geom_point() +
+  ggthemes::theme_few() + 
+  labs(title = "Chlorophyll a vs Secchi Disk Depth", x = "Chlorophyll a",
+       y = "Secchi Disk Depth ") +
+  ggthemes::scale_color_few()
 ```
 
 
 ## Why might this be the case? 
 
+Secci disk depth appears to decrease as Chlorophyll a increases.
+Increased concentrations of chlorophyll a indicate more algal growth likely
+increasing the turbidity of the water.
 
 ## 2) What states have the most data? 
+
+The top 5 in order of observation count are Minnesota, Michigan, Wisconsin, New York and Illinois
 
 ### 2a) First you will need to make a lagos spatial dataset that has the total 
 number of counts per site.
 
 ```{r}
-
 ## Your code here
+counts_per_site <- lake_centers %>%
+  group_by(lagoslakeid) %>%
+  mutate(count = n()) %>%
+  select(lagoslakeid,nhd_long,nhd_lat, count, state_zoneid)
+
+spatial_site_count <- inner_join(spatial_lakes,counts_per_site %>%
+distinct(lagoslakeid,.keep_all=T),
+by='lagoslakeid')
 ```
 
 
@@ -150,22 +168,54 @@ data.
 
 ```{r}
 ## Your code here
+states = us_states() %>%
+  st_transform(2163)
+
+spatial_counts_per_site <- st_as_sf(counts_per_site,coords=c('nhd_long','nhd_lat'),
+                          crs=4326) %>%
+  st_transform(2163)
+
+join_states_counts <- st_join(spatial_counts_per_site,states)
+
 ```
 
 
 ### 2c) Then you will want to group by state and sum all the observations in that
-state and arrange that data from most to least toatl observations per state. 
+state and arrange that data from most to least total observations per state. 
 
 ```{r}
 ## Your code here. 
+state_sums <- join_states_counts %>%
+  group_by(name) %>%
+  mutate(observations = sum(count)) %>%
+  distinct(name, .keep_all = TRUE) %>%
+  arrange(desc(observations))
+
+mapview(state_sums, zcol='observations')
+ 
 ```
 
 ##3 Is there a spatial pattern in Secchi disk depth for lakes with at least 200 
 observations?
 
+A strong spatial pattern isn't apparent. Upon closer analysis, I observed clustering of high secci disk depth values in the Maine region and clustering of low and mid values in the Michigan to Minnesota region.
 ```{r}
 ## Your code here
+secchi <- clarity_only %>%
+  filter(!is.na(secchi))
 
+# Keep only the lakes with at least 200 observations of secchi
+secchi_200 <- secchi %>%
+  group_by(lagoslakeid) %>%
+  mutate(count = n()) %>%
+  filter(count > 200)
+
+secchi_spatial_200 <- inner_join(spatial_lakes,secchi_200 %>%
+                            distinct(lagoslakeid,.keep_all=T),
+                          by='lagoslakeid') %>%
+  arrange(desc(secchi))
+
+mapview(secchi_spatial_200, zcol = 'secchi')
 ```
 
 
